# reminder-bot

./: .editorconfig  .gitignore  pyproject.toml
db/: file.db
src/: __init__.py  __main__.py  settings.json  setup.py
src/controller/: commands.py  controller.py  error.py  jobs.py
src/model/: db.py  model.py
src/system/: log.py
src/utils/: process.py  settings.py  states.py
