[tool.poetry]
name = "reminder-bot"
version = "0.1.0"
description = ""
authors = ["Dennis M. <ezerex@mail.ru>"]
readme = "README.md"
packages = [{include = "reminder_bot"}]

[tool.poetry.dependencies]
python = "^3.11"
loguru = "^0.6.0"
pydantic = {extras = ["dotenv"], version = "^1.10.6"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
